idl-toolkit/models/test/vmodl/errors/UberCustomError.vmodl
/*
 * Copyright 2012-2014 VMware, Inc.  All rights reserved.
 */
package vmodl.test.uber.errors;

/** a concrete custom error type */
class UberCustomError extends UberError {
}
